Fix advert info html overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,14 +1,14 @@
 html {
-    position: relative;
-    min-height: 100%;
-  }
+  position: relative;
+  min-height: 100vh;
+}
 
 body {
-    height: 100%;
-    margin-bottom: 60px;
-    background-color: rgba(242, 242, 242, 1);
-    font-family: 'Noto Sans', sans-serif;
-  }
+  height: 100%;
+  margin-bottom: 60px;
+  background-color: rgba(242, 242, 242, 1);
+  font-family: 'Noto Sans', sans-serif;
+}
 
 h1, h2{
   font-weight: 500;
@@ -47,7 +47,7 @@ h3 {
   margin-top: 2%;
 }
 
-.ad-description {
+.ad-description, .card-title {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -55,28 +55,28 @@ h3 {
 
 .fa-info {
   background-image: url('/static/images/frankie-lu-mvSnr7qxzPM-unsplash.jpg');
-  height: 100%;
+  height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 .op-info {
   background-image: url('/static/images/manuel-t-UQEWkszc3mY-unsplash.jpg');
-  height: 100%;
+  height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 .ac-info {
   background-image: url('/static/images/lauren-wyckoff-SrWw838OBWQ-unsplash.jpg');
-  height: 100%;
+  height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 .default-info {
   background-image: url('/static/images/david-leveque-21-lfJcLMVw-unsplash.jpg');
-  height: 100%;
+  height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -86,6 +86,7 @@ h3 {
   width: 80%;
   background-color: rgba(242, 242, 242, 1);
   border-radius: 2px;
+  overflow: scroll;
 }
 
 .title-card {
@@ -96,6 +97,7 @@ h3 {
 
 .ad-img {
   max-width: 100%;
+  height: auto;
 }
 
 .info-card {
